--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									co-educational, public school of excellence that enrolls approximately 100 academically accelerated 11th and 12th grade students from Massachusetts.
 									Read more about my school <a href="https://www.massacademy.org">here.</a>
 								<br><br>My academic interests mainly lie in research areas concering neuroscience and applied computer science. This past year, I won the 2nd place award at Worcester Regional Science 
-								and Engineering Fair and the 3rd place award at the state Masacchusetts Science and Engineering fair for my research in computational neuroscience. Read more about it <a href="#about">here.</a>
+								and Engineering Fair and the 3rd place award at the state Masacchusetts Science and Engineering fair for my research in computational neuroscience. Read more about it <a href="#work">here.</a>
 
 								<br></br>In my free time, I love to play tennis, pencil sketch and/or paint, and game with my friends. Although I'm not the best at tennis, I try to play with my friends whenever I can because of
 								 it's relaxing, monotone nature. As far as sketching goes, I generally like to draw landscapes, but I have recently started drawing portraits of my friends. 
@@ -82,6 +82,7 @@
 									a score that represent's the user's mental well being. This score is sent back to the website so that the user can see how they performed. The user is asked to 
 									take the test again over the next few months. If there is a general downward trend to the user's scores, they are alerted to visit the doctor's office
 									and get tested for neurological diseases. Refer to my <a href="https://github.com/csuraparaju/CSIndepProj.git">Github repo</a> for more information 
+
  							</article>
 
 						<!-- Contact -->
