--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								and Engineering Fair and the 3rd place award at the state Masacchusetts Science and Engineering fair for my research in computational neuroscience. Read more about it <a href="#work">here.</a>
 
 								<br></br>In my free time, I love to play tennis, pencil sketch and/or paint, and game with my friends. Although I'm not the best at tennis, I try to play with my friends whenever I can because of
-								 it's relaxing, monotone nature. As far as sketching goes, I generally like to draw landscapes, but I have recently started drawing portraits of my friends. 
+								 its relaxing, monotone nature. As far as sketching goes, I generally like to draw landscapes, but I have recently started drawing portraits of my friends. 
 								</p>
 
 								<br>Please contact me in the contact page if you want a copy of my resume!</br>
@@ -77,9 +77,9 @@
 									that users can use intermittently to make sure they are not showing early signs of dementia. 
 									
 									<br></br>The general data flow for the 
-									app is ass folows: users upload speech recordings of themselves answering certain questions taken from the Mini Mental Status Examination (MMSE) to the website.
+									app is as folows: users upload speech recordings of themselves answering certain questions taken from the Mini Mental Status Examination (MMSE) to the website.
 									These files are then sent to a private server hosted by Flask, where they are analyzed for speech biomarkers. At the end, the custom written algorithm will produce 
-									a score that represent's the user's mental well being. This score is sent back to the website so that the user can see how they performed. The user is asked to 
+									a score that represents the user's mental well being. This score is sent back to the website so that the user can see how they performed. The user is asked to 
 									take the test again over the next few months. If there is a general downward trend to the user's scores, they are alerted to visit the doctor's office
 									and get tested for neurological diseases. Refer to my <a href="https://github.com/csuraparaju/CSIndepProj.git">Github repo</a> for more information 
 
