--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								
 								<br></br>
 								<h2 class="main">A Comprehensive Application <br> for the Early Detection of <br> Dementia</h2></h2>
-								<span class="image main"><img src="images/pic03.png" alt="" /></span>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>While working on the cognitive symptoms of my research project, I noticed a lack of comprehensive tools that elderly people can use to keep 
 									track of their mental state of being. So, as an addition to my research project, I also decided to work on creating a cohesive web application 
 									that users can use intermittently to make sure they are not showing early signs of dementia. 
@@ -81,7 +81,10 @@
 									These files are then sent to a private server hosted by Flask, where they are analyzed for speech biomarkers. At the end, the custom written algorithm will produce 
 									a score that represents the user's mental well being. This score is sent back to the website so that the user can see how they performed. The user is asked to 
 									take the test again over the next few months. If there is a general downward trend to the user's scores, they are alerted to visit the doctor's office
-									and get tested for neurological diseases. Refer to my <a href="https://github.com/csuraparaju/CSIndepProj.git">Github repo</a> for more information 
+									and get tested for neurological diseases. Refer to my <a href="https://github.com/csuraparaju/CSIndepProj.git">Github repo</a> for more information.
+									Below is a code snippet from this project.
+								
+								<span class="image main"><img src="images/pic04.png" alt="" /></span>
 
  							</article>
 
