fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 									that users can use intermittently to make sure they are not showing early signs of dementia. 
 									
 									<br></br>The general data flow for the 
-									app is as folows: users upload speech recordings of themselves answering certain questions taken from the Mini Mental Status Examination (MMSE) to the website.
+									app is as follows: users upload speech recordings of themselves answering certain questions taken from the Mini Mental Status Examination (MMSE) to the website.
 									These files are then sent to a private server hosted by Flask, where they are analyzed for speech biomarkers. At the end, the custom written algorithm will produce 
-									a score that represents the user's mental well being. This score is sent back to the website so that the user can see how they performed. The user is asked to 
+									a score that represents the user's mental well-being. This score is sent back to the website so that the user can see how they performed. The user is asked to 
 									take the test again over the next few months. If there is a general downward trend to the user's scores, they are alerted to visit the doctor's office
 									and get tested for neurological diseases. Refer to my <a href="https://github.com/csuraparaju/CSIndepProj.git">Github repo</a> for more information.
 			
