--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 								<br></br>
 								<h2 class="main">A Comprehensive Application <br> for the Early Detection of <br> Dementia</h2></h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>While working on the cognitive symptoms of my research project, I noticed a lack of comprehensive tools that elderly people can use to keep 
-									track of their mental state of being. So, as an addition to my research project, I also decided to work on creating a cohesive web application 
+								<p>In recent years, I noticed a lack of comprehensive tools that elderly people can use to keep 
+									track of their mental state of being. So, decided to work on creating a cohesive web application 
 									that users can use intermittently to make sure they are not showing early signs of dementia. 
 									
 									<br></br>The general data flow for the 
