fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<h2 class="main">A Comprehensive Application <br> for the Early Detection of <br> Dementia</h2></h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>In recent years, I noticed a lack of comprehensive tools that elderly people can use to keep 
-									track of their mental state of being. So, decided to work on creating a cohesive web application 
+									track of their mental state of being. So, I decided to work on creating a cohesive web application 
 									that users can use intermittently to make sure they are not showing early signs of dementia. 
 									
 									<br></br>The general data flow for the 
