added circuit demo page for sisp

--- a/sispcircuits.html
+++ b/sispcircuits.html
@@ -13,7 +13,7 @@
   </h1>
   
   <p style="text-align:center;">
-    Redirecting to the circuit demo page...
+    Redirecting to the circuit demo page for SISP project ...
   </p>
   
 </body>
