--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 								<br></br>
 								<h2 class="main">Modeling Neural Circuits As Interconnected Graphs</h2></h2>
 								<span class="image main"><img src="images/connectome.jpeg" alt="" /></span>
-								<p>Intrigued by the brain, I wanted to learn more about the inner workings of the different aspects of functionality. That's why I'm currently working with Dr. 
-									Elizabeth Ryder, a professor of Computational Biology at WPI, to neural circuits as a physical structure that can be visualized and simulated. 
+								<p>Intrigued by the brain, I wanted to learn more about the inner workings of its functionality. That's why I'm currently working with Dr. 
+									Elizabeth Ryder, a professor of Computational Biology at WPI, to model neural circuits as a physical structure that can be visualized and simulated. 
 									Click <b><a href="https://www.suraparajuneuralcircuits.software/">here</a></b> to see my current progress.
 
 								<br></br>
