--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Krish Suraparaju</h1>
-								<p>A Neuroscience and Computer Science inclined high school <br> senior  
-								looking for Internship or research opportunities.</p>
+								<p>A senior in high school curious about the brain.</p>
 							</div>
 						</div>
 						<nav>
