--- a/sispcircuits.html
+++ b/sispcircuits.html
@@ -4,6 +4,8 @@
     <meta http-equiv="refresh" content="7; url='https://www.suraparajuneuralcircuits.software/" />
   </head>
   <body>
-    <p>Please follow <a href="https://www.suraparajuneuralcircuits.software/">this link to see this demo app.</a>.</p>
+    <p>You should be redirected to the web application showcasing my senior independent study project in a few seconds. If not, please follow 
+        <a href="https://www.suraparajuneuralcircuits.software/">this link</a>
+    </p>
   </body>
 </html>
