--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Krish Suraparaju</h1>
-								<p>A senior in high school curious about the brain.</p>
+								<p>Freshman at Carnegie Mellon University Studying Mathematics.</p>
 							</div>
 						</div>
 						<nav>
