landing page update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Krish Suraparaju</h1>
-								<p>Freshman at Carnegie Mellon University Studying Mathematics.</p>
+								<p>Student at Carnegie Mellon University Studying Mathematics.</p>
 							</div>
 						</div>
 						<nav>
@@ -45,10 +45,8 @@
 							<article id="intro">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic01.jpeg" alt="" /></span> 
-								<p>Hello there, my name is Krish Suraparaju! I'm a rising senior at Massachusetts Academy of Math and Science at WPI, which is a free, 
-									co-educational, public school of excellence that enrolls approximately 100 academically accelerated 11th and 12th grade students from Massachusetts.
-									Read more about my school <a href="https://www.massacademy.org">here.</a>
-								<br><br>My academic interests mainly lie in research areas concerning neuroscience and applied computer science. Last year, I won the 2nd place award at Worcester Regional Science 
+								<p>Hello there, my name is Krish Suraparaju! I'm studying mathematics at Carnegie Mellon University, with an interest in computational biology.
+								<br><br>My academic interests mainly lie in research areas concerning  mathematics, computer science, and neuroscience. Last year, I won the 2nd place award at Worcester Regional Science 
 								and Engineering Fair and the 3rd place award at the state Massachusetts Science and Engineering fair for my research in computational neuroscience. Read more about it <a href="#work">here.</a>
 
 								<br></br>In my free time, I love to play tennis, pencil sketch and/or paint, and game with my friends. Although I'm not the best at tennis, I try to play whenever I can because of
