--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic01.jpeg" alt="" /></span> 
 								<p>Hello there, my name is Krish Suraparaju! I'm studying mathematics at Carnegie Mellon University, with an interest in computational biology.
-								<br><br>My academic interests mainly lie in research areas concerning  mathematics, computer science, and neuroscience. Last year, I won the 2nd place award at Worcester Regional Science 
+								<br><br>My academic interests mainly lie in research areas concerning  mathematics, computer science, and neuroscience. In highschool, I won the 2nd place award at Worcester Regional Science 
 								and Engineering Fair and the 3rd place award at the state Massachusetts Science and Engineering fair for my research in computational neuroscience. Read more about it <a href="#work">here.</a>
 
 								<br></br>In my free time, I love to play tennis, pencil sketch and/or paint, and game with my friends. Although I'm not the best at tennis, I try to play whenever I can because of
