landing page updatres

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Krish Suraparaju</h1>
-								<p>Student at Carnegie Mellon University Studying Mathematics.</p>
+								<p>Student at Carnegie Mellon University Studying Mathematics and Computer Science</p>
 							</div>
 						</div>
 						<nav>
