--- a/course-review.html
+++ b/course-review.html
@@ -86,7 +86,7 @@
                 <!-- input projects inside project container -->
                 <div class="project-container">
                   <section class="project-card">
-                    <h3>21-127: Concepts of Mathematics ❤</h3>
+                    <h3>21-127: Concepts of Mathematics ❤️</h3>
                                 <h4>Professor(s): Clive Newstead</h4>
                                 <p>
                                     CMU's 21-127 was my first introduction to formal mathematics
@@ -167,7 +167,7 @@
                   
                   <section class="project-card">
                   
-                    <h3>15-251: Great Ideas in Theoretical Computer Science ✭</h3>
+                    <h3>15-251: Great Ideas in Theoretical Computer Science</h3>
                                 <h4>Professor(s): Anil Ada, Pravesh Kothari</h4>
                                 <p>
                                     CMU's 15-251 is a must take course for any computer scientist. It is the first rigorous
