--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="hero-text-container" data-aos="fade-up">
             <p>Hey there,</p>
             <h2>I am Krish Suraparaju</h2>
-            <p>a mathematics student at Carnegie Mellon Univeristy</p>
+            <p>a mathematics and computer science student at Carnegie Mellon Univeristy</p>
           </div>
           <a href="#contact" class="hero-button" data-aos="fade-up">Let's connect!</a>
         </div>
@@ -77,7 +77,7 @@
               <h2>> About</h2>
               <!-- About template -->
               <p>
-                I am a candidate for BS in Mathematics at Carnegie Mellon University. On campus, I am a teaching assistant for
+                I am a candidate for BS in Mathematics with an additional major in Computer Science at Carnegie Mellon University. On campus, I am a teaching assistant for
                 CMU's 15-122: Principles of Imperative Computation course, and work as an AI 
                 research assistant for the Mohimani Lab.</p> 
               <br>
