course reviews update

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     <header>
       <nav class="navbar-nav">
         <div class="nav-logo">
-
           <h1>KS</h1>
-
         </div> 
         <button
           class="mobile-nav-toggle"
@@ -45,7 +43,7 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li>
-            <a class="nav-link" href="#portfolio">Portfolio</a>
+            <a class="nav-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
             <a class="nav-link" href="./course-review.html">CMU Courses</a>
@@ -77,41 +75,43 @@
               <h2>> About</h2>
               <!-- About template -->
               <p>
-                I am a candidate for BS in Mathematics with an additional major in Computer Science at Carnegie Mellon University. On campus, I am a teaching assistant for
-                CMU's 15-122: Principles of Imperative Computation course, and work as an AI 
-                research assistant for the Mohimani Lab.</p> 
+                I am a candidate for B.S. in Mathematics, Computer Science at Carnegie Mellon University.
+                I'm interested in various fields of computer science, including software engineering and machine learning research.
+                This summer, I'm working as a software development engineering intern at Amazon, where I have the opportunity to
+                design and  develop a native AWS service. Using AWS Cloud Development Kit and Software Development Kit, I'm working on
+                building a vertically scalable event-driven service for handling fast write requests ( <span>&#8804;</span>  5ms latency)
+                into a 20 Terabyte datastore.
+              </p>
               <br>
-              <p> 
-                I am interested in the intersection of mathematics and computer science, and
-                am currently exploring the fields of machine learning. Specifically, I am working at
-                Mohimani Lab to help use machine learning models for predicting the structures of non-ribosomal peptide
-                synthetases (NRPSs) from their amino acid sequences. NRPSs are large, modular enzymes
-                that produce a wide variety of natural products, including antibiotics, antifungals, 
-                and even anticancer drugs. 
-              </p> <br>
-              <!-- <p>
-                In my free time, I enjoy playing tennis, running, and playing formula 1 racing games. 
-                During breaks, I like to travel back home to Grafton, Massachusetts and spend time with
-                my family and friends. 
-              </p> -->
+              <p>
+                On campus, I am working as an AI/ML Research Assistant at the <a href="http://mohimanilab.cbd.cmu.edu/">Mohimani Lab</a>,
+                where I co-authored a research paper that developed a transformer-based Protein "Language Model" for predicting the
+                structure of NRPSs from their amino acid "sentences." NRPSs are large modular enzymes that produce a wide variety of
+                natural products, including antibiotics, antifungals, and even anticancer
+                drugs.
+              </p><br>
+              <p>
+                I'm also a TA for <a href="http://www.cs.cmu.edu/~15122/">15-122:</a> Principles of Imperative Computation (Functions are Pointers!)
+                In this role, I help teach and answer questions relating to programming in C, data structures such as AVL trees/heaps and
+                algorithms such as Huffman Coding.
+              </p>
             </section>
-          
-
-
           </div>
         </div>
       </section>
 
-      <section id="portfolio">
-        <!-- <div class="section-highlight" data-aos="fade-up">Portfolio</div> -->
+      <!--<section id="portfolio">
+        &lt;!&ndash; <div class="section-highlight" data-aos="fade-up">Portfolio</div> &ndash;&gt;
         <div class="portfolio-container" data-aos="fade-up">
           <div class="portfolio-card">
             <div class="portfolio-content">
               <h2>> Portfolio</h2>
 
-              <!-- input projects inside project container -->
               <div class="project-container">
-                <section class="project-card">
+
+
+
+                &lt;!&ndash;<section class="project-card">
                   <img
                     class="project-img"
                     src="./assets/images/mindTune.jpeg"
@@ -207,10 +207,10 @@
                       Paper
                     </a>
                   </div>
-                </section>
+                </section>&ndash;&gt;
 
                 
-                <!-- <section class="project-card">
+                &lt;!&ndash; <section class="project-card">
                   <img
                     class="project-img"
                     src="./assets/images/rnapred.png"
@@ -235,14 +235,14 @@
                       Paper
                     </a>
                   </div>
-                </section> -->
+                </section> &ndash;&gt;
 
 
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </section>-->
 
 
       <section id="contact">
@@ -281,8 +281,7 @@
     <footer>
       <div class="footer-content">
         <p>
-          Made by Krish Suraparaju. Written in HTML, CSS, and JavaScript. Hosted 
-          on a simple <a href="https://github.com/csuraparaju/portfolio_server" style="color: #a7c957;">webserver</a> that I wrote in C.
+          Made by Krish Suraparaju. Written in HTML, CSS, and JavaScript.
         </p>
       </div>
     </footer>
