portfolio changes and better organization for courses

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    
+
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -70,14 +70,15 @@
       <section id="about">
         <!-- <div class="section-highlight" data-aos="fade-up">ABOUT</div> -->
         <div class="about-container" data-aos="fade-up">
-          <div class="about-card">
+          <div class="contact-card">
+            <h2>> About</h2>
             <section class="about-content">
-              <h2>> About</h2>
               <!-- About template -->
               <p>
                 I am a candidate for B.S. in Mathematics, Computer Science at Carnegie Mellon University.
-                I'm interested in various fields of computer science, including software engineering and machine learning research.
-                This summer, I'm working as a software development engineering intern at Amazon, where I have the opportunity to
+                I'm interested in various fields of computer science, including software engineering, algorithmic trading,
+                machine learning research.
+                This summer, I'm working as a software development engineering intern at <a href="https://en.wikipedia.org/wiki/Amazon_(company)">Amazon</a>, where I have the opportunity to
                 design and  develop a native AWS service. Using AWS Cloud Development Kit and Software Development Kit, I'm working on
                 building a vertically scalable event-driven service for handling fast write requests ( <span>&#8804;</span>  5ms latency)
                 into a 20 Terabyte datastore.
@@ -85,15 +86,15 @@
               <br>
               <p>
                 On campus, I am working as an AI/ML Research Assistant at the <a href="http://mohimanilab.cbd.cmu.edu/">Mohimani Lab</a>,
-                where I co-authored a research paper that developed a transformer-based Protein "Language Model" for predicting the
-                structure of NRPSs from their amino acid "sentences." NRPSs are large modular enzymes that produce a wide variety of
+                where I co-authored a research paper that developed a transformer-based Protein Language Model for predicting the
+                structure of NRPSs from their amino acid sentences. NRPSs are large modular enzymes that produce a wide variety of
                 natural products, including antibiotics, antifungals, and even anticancer
                 drugs.
               </p><br>
               <p>
-                I'm also a TA for <a href="http://www.cs.cmu.edu/~15122/">15-122:</a> Principles of Imperative Computation (Functions are Pointers!)
+                I'm also a TA for <a href="http://www.cs.cmu.edu/~15122/">15-122:</a> Principles of Imperative Computation
                 In this role, I help teach and answer questions relating to programming in C, data structures such as AVL trees/heaps and
-                algorithms such as Huffman Coding.
+                algorithms such as Huffman Coding. Functions are Pointers!
               </p>
             </section>
           </div>
@@ -253,7 +254,6 @@
             <p>You can contact directly me through these following links</p>
 
             <div class="contact-links">
-
 
               <a href="mailto:csurapar@cs.cmu.edu">
                 <img
