typos and scrolling fixes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <p>
                 I am a candidate for B.S. in Mathematics, Computer Science at Carnegie Mellon University.
                 I'm interested in various fields of computer science, including software engineering, algorithmic trading,
-                machine learning research.
+                and machine learning research.
                 This summer, I'm working as a software development engineering intern at <a href="https://en.wikipedia.org/wiki/Amazon_(company)">Amazon</a>, where I have the opportunity to
                 design and  develop a native AWS service. Using AWS Cloud Development Kit and Software Development Kit, I'm working on
                 building a vertically scalable event-driven service for handling fast write requests ( <span>&#8804;</span>  5ms latency)
@@ -100,151 +100,6 @@
           </div>
         </div>
       </section>
-
-      <!--<section id="portfolio">
-        &lt;!&ndash; <div class="section-highlight" data-aos="fade-up">Portfolio</div> &ndash;&gt;
-        <div class="portfolio-container" data-aos="fade-up">
-          <div class="portfolio-card">
-            <div class="portfolio-content">
-              <h2>> Portfolio</h2>
-
-              <div class="project-container">
-
-
-
-                &lt;!&ndash;<section class="project-card">
-                  <img
-                    class="project-img"
-                    src="./assets/images/mindTune.jpeg"
-                    alt="project-1"
-                  />
-                  <h3>MindTune</h3>
-                  <h5>JavaScript, ReactJS, PostgreSQL, AWS</h5>
-                  <p>
-                    Designed and implemented a ReactJS web application meant to help users track their cognitive health.
-                    Program asks users to record responses to a series of questions, which are designed to assess cognitive function
-                    by analyzing vocal biomarkers such as pitch, intonation, and speech rate, and determine a cognitive score.
-                    Utilized ReactJS to create the front end of the website, PostgresSQL for database management relating to user
-                    data and Amazon Web Services for hosting
-                  </p>
-                </section>
-
-                <section class="project-card">
-                  <img
-                    class="project-img"
-                    src="./assets/images/server.jpeg"
-                    alt="project-2"
-                  />
-                  <h3>Webserver</h3>
-                  <h5>C, Standard Library, POSIX library</h5>
-                  <p>
-                    Implemented an HTTP request parser, response builder, and LRU cache in C to create a simple web server that
-                     serves static content and cached files, using this <a href="https://github.com/bloominstituteoftechnology/C-Web-Server">repository</a>
-                     as a guide. The server handles GET requests for random numbers
-                      or static files, checks the cache before loading files from disk, and uses a doubly linked 
-                      list and hash table for the cache itself. Researched topics like 
-                      HTTP body parsing, conditional file serving, cache entry expiration, and the pthreads library,
-                      and implemented them using the guide as a reference. Working on hosting this website on the custom 
-                      built server.
-                  </p>
-
-                  <div class="project-card-links">
-                    <a href="https://github.com/csuraparaju/portfolio_server">
-                      <img
-                        class="project-icons"
-                        src="./assets/icons/github.png"
-                        alt="Github"
-                      />
-                      Github
-                    </a>
-                  </div>
-
-                </section>
-
-                <section class="project-card">
-                  <img
-                    class="project-img"
-                    src="./assets/images/nrps.png"
-                    alt="project-2"
-                  />
-                  <h3>AdenPredictor</h3>
-                  <h5>Python, Rust</h5>
-                  <p>
-                    Working as part of Mohimani Lab on improving the accuracy of a machine learning model that predicts the 
-                    Adenylation (A) domain of a non-ribosomal peptide synthetase (NRPS) given its amino acid sequence. 
-                    A-domains are responsible for selecting and activating amino acids for incorporation into the 
-                    peptide product. I am working on parsing the MIBiG database of NRPSs genes and 
-                    analyzing the data to determine local and global contexts that help predict the A-domain specificity.
-                    For example, an A-domain preceded by a heterocyclization (Cy) domain is more likely to select
-                    Serine (Ser) as its amino acid substrate. 
-                  </p>
-
-                </section>
-
-                <section class="project-card">
-                  <img
-                    class="project-img"
-                    src="./assets/images/dataopen.png"
-                    alt="project-3"
-                  />
-                  <h3>ParkWell: NYC</h3>
-                  <h5>Python, Seaborn, Pandas, Tensorflow</h5>
-                  <p>
-                  Collaborated with a team for the Citadel Data Open competition to answer
-                  the question: how can publicly available and crowdsourced data be used to diagnose park health and pinpoint
-                  areas for intervention in New York City? Answered this research question by developing a Convolutional Neural
-                  Network for predictively diagnosing the eco health of various parks in New York City using geo satellite images.
-                  Performed Exploratory Data Analysis on collected datasets, ran regression analysis on several
-                  predictive metrics, and worked on developing the convolutional autoencoder
-                  </p>
-
-                  <div class="project-card-links">
-                    <a href="./assets/pdf/Team_12_report.pdf">
-                      <img
-                        class="project-icons"
-                        src="./assets/icons/pdf_icon.png"
-                        alt="Report"
-                      />
-                      Paper
-                    </a>
-                  </div>
-                </section>&ndash;&gt;
-
-                
-                &lt;!&ndash; <section class="project-card">
-                  <img
-                    class="project-img"
-                    src="./assets/images/rnapred.png"
-                    alt="project-4"
-                  />
-                  <h3>RNAPredictor</h3>
-                  <h5>Python, Pandas, Tensorflow</h5>
-                  <p>
-                    Worked with a team to develop a deep learning framework for RNA secondary structure prediction by calculating structure probabilities and then maximizing probability using dynamic programming. 
-                    Wrote the DP recurrence relations and helped clean dataset for the Convolutional Neural Network (CNN) model. Compared deep learning model performance against existing Nussinov
-                    and Zuker algorithms on 1000 sequences from bprna dataset. Results showed that our framework outperformed the Nussinov algorithm, but not the
-                    Zucker algorithm. We concluded this is likely because our model was not trained on pseudo-knotted sequences, which the Zuker algorithm is able to handle. 
-                  </p>
-
-                  <div class="project-card-links">
-                    <a href="./assets/pdf/RNA_Secondary_Structure_Prediction.pdf">
-                      <img
-                        class="project-icons"
-                        src="./assets/icons/pdf_icon.png"
-                        alt="Report"
-                      />
-                      Paper
-                    </a>
-                  </div>
-                </section> &ndash;&gt;
-
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>-->
-
 
       <section id="contact">
         <!-- <h2 class="section-highlight" data-aos="fade-up">Contacts</h2> -->
