--- a/course-review.html
+++ b/course-review.html
@@ -150,7 +150,7 @@
                                         </p>
                                     </div>
                                             <div class="course-card-content">
-                                                <h3>15-386: Neural Computation &#x2605,</h3>
+                                                <h3>15-386: Neural Computation &#x2605;</h3>
                                                 <h4>Professor(s) Tai Sing Lee</h4>
                                                 <br>
                                                 <p>
@@ -221,7 +221,7 @@
                                     <section id="freshman-year">
                                         <div class="course-table">
                                             <div class="course-card-content">
-                                                <h3>21-127: Concepts of Mathematics &#x2665️</h3>
+                                                <h3>21-127: Concepts of Mathematics &#x2665;</h3>
                                                 <h4>Professor(s): Clive Newstead</h4>
                                                 <br>
                                                 <p>
