about page tweaks

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
     </ul>
     <p>
-      I'm Krish, a junior at <a href="https://www.cmu.edu/">Carnegie Mellon University</a> studying mathematics
+      I'm Krish, an undergraduate at <a href="https://www.cmu.edu/">Carnegie Mellon University</a> studying mathematics
       and computer science. Sometimes I blog here about things I find interesting.
     </p>
 
