--- a/about.html
+++ b/about.html
@@ -31,8 +31,13 @@
     </p>
 
     <p>
-      My favorite classes at CMU have been 15-251 (Theoretical Computer Science), 15-386 (Neural Computation),
-      and 21-355 (Real Analysis I).
+      My favorite classes at CMU have been 15-251 (Theoretical Computer Science), 21-355/356 (Real Analysis I/II),
+      and 02-251 (Great Ideas in Computational Biology).
+    </p>
+    <p>
+      Recently, I've been interested in real analysis, and its applications to machine learning.
+      My current favorite paper is <a href="https://arxiv.org/pdf/2407.09468v1">this one</a> on
+      machine learning techniques using geometric, topological, and algebraic structures.
     </p>
 
   </div>
@@ -51,6 +56,11 @@
       <div class="company">Amazon</div>
       <div class="role">Software Development Engineering Intern</div>
       <div class="duration">June 2024 - August 2024</div>
+      <div class="description">
+        <p> I worked on the People Data Producer Experience team, where I built an
+          AWS tool meant to help Amazon employees ingest large amounts of
+          data into a data store.
+        </p>
     </div>
 
     <div class="divider"></div>
@@ -60,15 +70,28 @@
         <div class="role">Head Teaching Assistant for 15-122</div>
         <div class="duration">December 2024 - Present</div>
         <div class="description">
+          <p> Co-leading a staff of 45+ TAs. I'm responsible for managing the course staff,
+            coordinating with professors, and ensuring a smooth learning experience for students.
+          </p>
         </div>
         <div class="role">Teaching Assistant for 15-122</div>
         <div class="duration">August 2023 -  Present</div>
+        <div class="description">
+          <p> CMU's course for introduction to data structures and algorithms and programming in C.
+            I teach recitations, hold office hours and grade assignments.
+          </p>
       </div>
       <div class="divider"></div>
     <div class="experience-item">
     <div class="company">Mohimani Lab</div>
     <div class="role">Undergraduate Researcher</div>
     <div class="duration">January 2023 - Present</div>
+    <div class="description">
+      <p>I helped use protein language models to predict binding pockets
+        of a certain class of proteins called non-ribisomal peptide synthetases.
+        Read more at <a href="https://pubmed.ncbi.nlm.nih.gov/39868251/">this paper</a>.
+      </p>
+    </div>
     </div>
     </div>
   </div>
